# templates

./: LICENSE  README.md
.scafalra/.devcontainer/: Dockerfile  build.sh  clean.sh  rebuild.sh
.zed/: settings.json
mock/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
mock/src/: index.ts  people.ts  utils.ts
node-cli/: .eslintrc.json  .prettierrc  package.json  pnpm-lock.yaml  tsup.config.ts
react/: .editorconfig  .gitattributes  .gitignore  biome.json  index.html  input.css  package.json  tailwind.config.js  tsconfig.node.json
react-ts-yarn2/: .eslintignore  .eslintrc  .gitignore  .yarnrc.yml  index.html  package.json  tsconfig.json  vite.config.ts
react-ts-yarn2/src/: main.tsx
react/src/: main.tsx
rust/: Cargo.toml  justfile  rust-toolchain.toml  rustfmt.toml  taplo.toml
rust-basic/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
rust-basic/.github/workflows/: ci.yml
rust-nightly/: Cargo.toml  rustfmt.toml
rust-workspace/: .gitignore  Cargo.toml  justfile  rust-toolchain.toml
rust-workspace/.github/workflows/: ci.yml
rust-workspace/crates/project_name/: Cargo.toml
rust/.github/workflows/: ci.yml  release.yml
tauri/: .gitignore  Cargo.toml  biome.json  justfile  package.json  taplo.toml  tsconfig.base.json  tsconfig.json
tauri/capabilities/: default.json
tauri/scripts/: run-browser.ts  run-tauri.ts  run.ts  set-pkg-version.ts
tauri/tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
tauri/tauri/capabilities/: default.json
tauri/tauri/src/: main.rs
tauri/ui/: input.css  package.json  tsconfig.json  vite.config.ts
tauri/ui/public/: iconhere
tauri/ui/src/: app.tsx  consts.ts  global.d.ts  ipc.ts  main.tsx  types.ts
tauri/ui/src/atom/: primitive.ts  theme.ts
tauri/ui/src/components/: checkbox-with-label.tsx  common-header.tsx  data-table.tsx  edit-input.tsx  icons.tsx  index.ts  input-number.tsx  one-alert-dialog.tsx  one-select.tsx  operation-button.tsx  simple-form.tsx  toast.tsx  tooltip-button.tsx
tauri/ui/src/hooks/: index.ts  use-boolean.ts  use-listen-effect.ts  use-t.ts
tauri/ui/src/i18n/: en.ts  index.ts  zh.ts
ts-node-cli/: .gitignore  .prettierignore  package.json  pnpm-lock.yaml  tsconfig.json
ts-node-cli/scripts/: publish.sh
(+30 files in other folders)
