[package]
name = "untitled"
version = "0.1.0"
edition = "2024"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
description = "none"
repository = "none"
license = "MIT"
publish = false

# if publish
# categories = []
# keywords = []
# include = ["Cargo.toml", "Cargo.lock", "README.md", "LICENSE", "src/**"]

# if workspace
# [workspace]
# members = []
# resolver = "3"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
