[package]
name = "untitled"
version = "0.1.0"
edition = "2021"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
description = "none"
repository = "none"
license = "MIT"
publish = false

[[bin]]
name = "Untitled"
path = "src/main.rs"

[dependencies]
opener = "0.7.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
